[metadata]
name = catena
summary = Catena is blockchain as a service.
description-file =
    README.rst
author = Hewlett Packard Enterprise
author-email = blockchain@lists.osp.hpe.com
home-page = https://github.com/HewlettPackard/catena
classifier =
    Environment :: Cloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    catena

[entry_points]
oslo.config.opts =
    catena = catena.common.config:list_opts
console_scripts =
    catena-api = catena.cmd.server:main
    catena-manage = catena.cmd.manage:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = catena/locale
domain = catena

[update_catalog]
domain = catena
output_dir = catena/locale
input_file = catena/locale/catena.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = catena/locale/catena.pot
